--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -1,1 +1,191 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Good) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Good) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56ec9e99",
+   "metadata": {},
+   "source": [
+    "#### **Exercise 1(Make me an odd list)**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0f73c7a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 11.7 μs\n",
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time\n",
+    "odd_square_list = []\n",
+    "for i in range(10):\n",
+    "    if i%2 == 0:\n",
+    "        continue\n",
+    "    odd_square_list.append(i**2)\n",
+    "print(odd_square_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9e5c8b7",
+   "metadata": {},
+   "source": [
+    "#### **Exercise 2(Make me another odd list)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bfdcb78c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 11.4 μs\n",
+      "[ 1  9 25 49 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time\n",
+    "import numpy as np\n",
+    "array = np.array([0,1,2,3,4,5,6,7,8,9])\n",
+    "array = array[~array%2==0]\n",
+    "print(array**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e7a8a7f",
+   "metadata": {},
+   "source": [
+    "#### **Exercise 3(Time me!)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2748a53",
+   "metadata": {},
+   "source": [
+    "The solution using lists was faster"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e2cba23",
+   "metadata": {},
+   "source": [
+    "#### **Exercise 4(A problem of decay)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "061e78cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample took 10 years to decay to half its original value\n"
+     ]
+    }
+   ],
+   "source": [
+    "quantity = 100\n",
+    "time = 0\n",
+    "while quantity >50:\n",
+    "    quantity = quantity - 5\n",
+    "    time = time + 1\n",
+    "print('Sample took',time,'years to decay to half its original value')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0a9c413",
+   "metadata": {},
+   "source": [
+    "#### **Exercise 5(Changes in CO2)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a3c6cabd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CO2 increased from year 3 to year 5 by 3 ppm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "co2_data = np.array([[1,5],[3,4],[5,7],[7,8]])\n",
+    "number_of_years = len(co2_data)\n",
+    "for i in range(number_of_years-1):\n",
+    "    if co2_data[i+1,1]-co2_data[i,1]>=3:\n",
+    "        print('CO2 increased from year', co2_data[i,0],'to year',co2_data[i+1,0],'by',co2_data[i+1,1]-co2_data[i,1],'ppm')\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
