--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises-Mohit.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises-Mohit.ipynb
@@ -117,7 +117,7 @@
     "\n",
     "3. What is a **commit**?\n",
     "\n",
-    "Answer: A commit is the action of taking a snapshop of your repository at a particular time so that you can access that particular state of the project in the future\n",
+    "Answer: A commit is the action of taking a snapshot of your repository at a particular time so that you can access that particular state of the project in the future\n",
     "\n",
     "4. What is a **push**?\n",
     "\n",
