READY TO REVIEW_Storing_data_need

--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -186,6 +186,30 @@
     "\n",
     "print(np.corrcoef(x_1, x_2)) #Checking with the function\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9d35bdf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "narray = np.array([1,2,3])\n",
+    "narray = np.append(narray,4)\n",
+    "narray"
+   ]
   }
  ],
  "metadata": {
