--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -119,7 +119,7 @@
     "while quantity >50:\n",
     "    quantity = quantity - 5\n",
     "    time = time + 1\n",
-    "print('Sample took',time,'years to decay to half its original value')\n"
+    "print(f'Sample took {time} years to decay to half its original value')\n"
    ]
   },
   {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "a3c6cabd",
    "metadata": {},
    "outputs": [
@@ -140,13 +140,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CO2 increased from year 3 to year 5 by 3 ppm\n"
+      "CO2 increased from year 2015.0 to year 2016.0 by 3.410000000000025 ppm\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "co2_data = np.array([[1,5],[3,4],[5,7],[7,8]])\n",
+    "co2_data = np.array([(2000, 369.55), (2001, 371.14), (2002, 373.28), \n",
+    "    (2003, 375.80), (2004, 377.52), (2005, 379.80), \n",
+    "    (2006, 381.90), (2007, 383.79), (2008, 385.60), \n",
+    "    (2009, 387.43), (2010, 389.90), (2011, 391.65), \n",
+    "    (2012, 393.85), (2013, 396.52), (2014, 398.65),\n",
+    "    (2015, 400.83), (2016, 404.24), (2017, 406.55), \n",
+    "    (2018, 408.52), (2019, 411.44), (2020, 414.24)])\n",
     "number_of_years = len(co2_data)\n",
     "for i in range(number_of_years-1):\n",
     "    if co2_data[i+1,1]-co2_data[i,1]>=3:\n",
