READY TO REVIEW_Loops_Need

--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "13b33e2d",
    "metadata": {},
    "outputs": [
@@ -68,15 +68,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 :\t1\t2\t3\t4\t5\t\n",
+      "1:\t1\t2\t3\t4\t5\t\n",
       "\n",
-      "2 :\t2\t4\t6\t8\t10\t\n",
+      "2:\t2\t4\t6\t8\t10\t\n",
       "\n",
-      "3 :\t3\t6\t9\t12\t15\t\n",
+      "3:\t3\t6\t9\t12\t15\t\n",
       "\n",
-      "4 :\t4\t8\t12\t16\t20\t\n",
+      "4:\t4\t8\t12\t16\t20\t\n",
       "\n",
-      "5 :\t5\t10\t15\t20\t25\t\n",
+      "5:\t5\t10\t15\t20\t25\t\n",
       "\n"
      ]
     }
@@ -84,8 +84,8 @@
    "source": [
     "import numpy as np\n",
     "array = np.array([1,2,3,4,5])\n",
-    "for count,i in enumerate(array):\n",
-    "    print(count+1, ':', end = '\\t')\n",
+    "for count,i in enumerate(array,1):\n",
+    "    print(f'{count}:', end = '\\t')\n",
     "    for x in range(5):\n",
     "        print(i*array[x], end='\\t')\n",
     "    print('\\n')\n"
