READY TO REVIEW

--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cd0bd318",
    "metadata": {},
    "outputs": [
@@ -52,8 +52,7 @@
     "\n",
     "old_path = 'oct-08_singapore.txt'\n",
     "new_path = conversion[f'{old_path[0:3]}'] + old_path[3:]\n",
-    "print(new_path)\n",
-    "\n"
+    "print(new_path)\n"
    ]
   },
   {
