READY TO REVIEW

--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0f73c7a4",
    "metadata": {},
    "outputs": [
@@ -27,20 +27,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 11.7 μs\n",
-      "[1, 9, 25, 49, 81]\n"
+      "767 ns ± 7.64 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%time\n",
+    "%%timeit\n",
     "odd_square_list = []\n",
     "for i in range(10):\n",
     "    if i%2 == 0:\n",
     "        continue\n",
     "    odd_square_list.append(i**2)\n",
-    "print(odd_square_list)\n"
+    "#print(odd_square_list)\n"
    ]
   },
   {
@@ -53,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "bfdcb78c",
    "metadata": {},
    "outputs": [
@@ -61,18 +59,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 11.4 μs\n",
-      "[ 1  9 25 49 81]\n"
+      "4.59 μs ± 118 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%time\n",
+    "%%timeit\n",
     "import numpy as np\n",
     "array = np.array([0,1,2,3,4,5,6,7,8,9])\n",
     "array = array[~array%2==0]\n",
-    "print(array**2)"
+    "#print(array**2)"
    ]
   },
   {
