--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c6388f15",
    "metadata": {},
    "outputs": [
@@ -129,8 +129,10 @@
     "    flips = np.random.rand(10)\n",
     "    flips[flips>0.5]=1\n",
     "    flips[flips<0.5]=0\n",
-    "    heads = int(sum(flips))\n",
-    "    print(f'Experiment {i+1}: No. of Heads = {heads}')\n",
+    "    heads = int(sum(flips)) #Finding number of heads\n",
+    "    print(f'Experiment {i+1}: No. of Heads = {heads}') \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
