READY TO REVIEW

--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -281,7 +281,7 @@
     "    #cairo_split_files = os.path.split(files)\n",
     "    #cairo_files.append(cairo_split_files[1])\n",
     "    #print(files)\n",
-    "    shutil.copy(files, 'cities\\Cairo')\n",
+    "    shutil.copy(files, 'cities\\Cairo') #works\n",
     "\n",
     "\n",
     "\n"
