--- a/1.2_using_jupyter__exercises/using_jupyter_(need),_exercises-Mohit.ipynb
+++ b/1.2_using_jupyter__exercises/using_jupyter_(need),_exercises-Mohit.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "6. What is the difference betwqeen **GitHub** and **GitHub Desktop**\n",
     "\n",
-    "Answer: GitHub is an online platform that contains the shared repository that you and all your group members can see. GitHub Desktop is a tool you use where you can pull the shared repository from GitHub and work on it locally on your own device before pushing it back to GitHub for your group members to see your work. Git is also a place where projects can be shared easily between developers for them to collaborate."
+    "Answer: GitHub is an online platform that contains the shared repository that you and all your group members can see. GitHub Desktop is a tool you use where you can pull the shared repository from GitHub and work on it locally on your own device before pushing it back to GitHub for your group members to see your work. Git is also a place where projects can be shared easily between developers for them to collaborate"
    ]
   },
   {
