--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "28393c43",
    "metadata": {},
    "outputs": [
@@ -86,8 +86,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beryllium\n",
-      "Beryllium\n"
+      "Boron\n",
+      "Nitrogen\n"
      ]
     }
    ],
@@ -98,8 +98,8 @@
     "            'Nitrogen', 'Oxygen',\n",
     "            'Fluorine',\n",
     "            'Neon']\n",
-    "print(elements[3])\n",
-    "print(elements[-7])"
+    "print(elements[4])\n",
+    "print(elements[-4])"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7f0f8423",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
     "        1, 29, 94, 72, 46, 47, 1, 74, 32, 20,\n",
     "        8, 37, 35, 1, 89, 29, 86, 19, 43, 61] \n",
     "numbers_array = np.array(numbers)\n",
-    "print(sum(numbers_array == 1))\n"
+    "print(sum(numbers_array == 1))  #Turning every element into 1 and counting them\n"
    ]
   },
   {
