--- a/1.2_using_jupyter__exercises/using_jupyter_(need),_exercises-Mohit.ipynb
+++ b/1.2_using_jupyter__exercises/using_jupyter_(need),_exercises-Mohit.ipynb
@@ -152,7 +152,9 @@
     "\\sigma = \\sqrt{\\dfrac{1}{n}\\sum_{i=1}^{n}(x_{i}-\\mu)^2}\n",
     "$$\n",
     "$$\n",
-    "r = \\dfrac{\\sum_{i=1}^{n}(x_{i}-\\mu_{X})(y_{i}-\\mu_{Y})}{\\sqrt{\\sum_{i=1}^{n}(x_{i}-\\mu_{X})^2\\sum_{i=1}^{n}(y_{i}-\\mu_{Y})^2}}"
+    "r = \\dfrac{\\sum_{i=1}^{n}(x_{i}-\\mu_{X})(y_{i}-\\mu_{Y})}{\\sqrt{\\sum_{i=1}^{n}(x_{i}-\\mu_{X})^2\\sum_{i=1}^{n}(y_{i}-\\mu_{Y})^2}}\n",
+    "\n",
+    "Testing"
    ]
   }
  ],
