--- a/1.2_using_jupyter__exercises/using_jupyter_(need),_exercises-Mohit.ipynb
+++ b/1.2_using_jupyter__exercises/using_jupyter_(need),_exercises-Mohit.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "\n",
     "\n",
-    "Image from the [Wikipedia page on Quadratic equations](https://en.wikipedia.org/wiki/Quadratic_equation)\n",
+    "(Image from the [Wikipedia page on Quadratic equations](https://en.wikipedia.org/wiki/Quadratic_equation))\n",
     "\n",
     "The general form of the quadratic equation is:\n",
     "$$\n",
