--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "0f73c7a4",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "bfdcb78c",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
    "id": "e2748a53",
    "metadata": {},
    "source": [
-    "The solution using lists was faster"
+    "The solution using loops was faster"
    ]
   },
   {
