--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "c256b7cd",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
    ],
    "source": [
     "\n",
-    "print(f\"{'Apple':<10}\", \"$ 0.99\")\n",
+    "print(f\"{'Apple':<10}\", \"$ 0.99\") #The arrow makes spaces\n",
     "print(f\"{'Banana':<10}\", \"$ 0.59\")\n",
     "print(f\"{'Orange':<10}\", \"$ 1.29\")"
    ]
