--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2b96f138",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,8 @@
      "output_type": "stream",
      "text": [
       "120\n",
-      "invalid input\n"
+      "invalid input\n",
+      "1\n"
      ]
     }
    ],
@@ -235,7 +236,7 @@
     "    \n",
     "print(factorial(5))\n",
     "print(factorial(-1))\n",
-    "    \n",
+    "print(factorial(0))\n",
     "\n",
     "\n",
     "    \n"
