--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f06b7739",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
     "    30, 35, 40, 45, 50\n",
     "]\n",
     "for x in temperatures_celsius:\n",
-    "    print(f'{x} degrees Celsius {1.8*x+32} farenheit')\n"
+    "    print(f'{x} degrees Celsius {1.8*x+32} fahrenheit')\n"
    ]
   },
   {
